@@ -17,7 +17,7 @@ deps =
     coverage
     html5lib>=1.0
     nose
-    pyPdf2
+    pikepdf>=1.19.3
     rl32: reportlab>=3.2,<3.3
     rl33: reportlab>=3.3,<3.4
     rl34: reportlab>=3.4,<3.5
