@@ -20,7 +20,7 @@ deps =
     coverage
     html5lib>=1.0
     nose
-    pyPdf2
+    pikepdf>=1.19.3
     rl30: reportlab>=3.3.0,<3.4.0
     rl31: reportlab>=3.4.0,<3.5.0
     rl32: reportlab>=3.5.0,<3.5.10
